# CheapAteDebugger

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
dev-docs/: CheapAteDesign.excalidraw  book.toml
dev-docs/src/: README.md
source/: Chip8Backend.cpp  Chip8Backend.hpp  Chip8Display.cpp  Chip8Display.hpp  CommandInputDock.qml  DisassemblyDock.qml  EmulatedScreenDock.qml  MySeparator.qml  MyTitleBar.qml  lib.cpp  lib.hpp  main.cpp  main.qml  resources.qrc
source/lib/: CPU.hpp  Chip8Emulator.cpp  Chip8Emulator.hpp  Emulators.hpp  Registers.hpp  __CPU.hpp  __Emulator.hpp  __InstructionAction.hpp  __Memory.hpp  __Registers.hpp
source/lib/Chip8/: Actions.hpp  Chip8CPU.cpp  Chip8CPU.hpp  Chip8Emulator.cpp  Chip8Emulator.hpp  Chip8Memory.hpp  Chip8Registers.hpp
test/: CMakeLists.txt  chip8_emulation.cc
test/source/: CheapAteDebugger_test.cpp
